--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
     <title>
         Learning Git
     </title>
 </head>
 <body>
-    Hello Git
+    <h1>Git Cheat Sheet</h1>
+    <div>git config</div>
+    <div>git init</div>
+    <div>git add</div>
+    <div>git status</div>
+    <div>git commit</div>
+    <div>git diff</div>
 </body>
 </html>
