Add script for mouse over effect for commands

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div>git status</div>
     <div>git commit</div>
     <div>git diff</div>
+    <script src="script.js"></script>
 </body>
 </html>
