--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <div>git restore</div>
     <div>git clean</div>
     <div>git show</div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
