--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>git status</div>
     <div>git commit</div>
     <div>git diff</div>
-    <div>git lg</div>
+    <div>git log</div>
     <div>git reset</div>
     <div>git restore</div>
     <div>git clean</div>
