--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </title>
 </head>
 <body>
-    <button onclick="exportAsPng()">Export as PNG</button>
+    <button class="button" onclick="exportAsPng()">Export as PNG</button>
     <div id="capture">
         <h1>Git Cheat Sheet</h1>
 
